--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
           name="terms-and-conditions"
         />
         I accept the
-        <a href="https://www.freecodecamp.org/news/terms-of-service/"
+        <a
+          target="_blank"
+          href="https://www.freecodecamp.org/news/terms-of-service/"
           >terms and conditions</a
         >
       </label>
